--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -57,7 +57,7 @@ In mathematical programming languages like MATLAB and Julia, there is a differen
 The $.*$ operator, on the other hand, represents element-wise multiplication. This means that if we have regular column vectors like $u$ and $w = v'$, where $w$ is the transpose of $v$, the evaluation of $u.*w$ will be element-wise multiplication of $u$ and $w$, into a new vector of the same dimensions as $u$ and $w$. Here, one needs to make a choice in the implementation of multiplication and division for AD in Julia, because as of now, there are no good ways of overloading any dot operators for custom types such as \texttt{FAD}. \emph{\citet{JuliaIssueDot}} explains the problems of overloading the element-wise $.*$ operator, and states that there is no good way of actually doing this. The issue has still not been resolved. With this in mind, and that there will only be used element-wise multiplication in this project, I have decided that I herein redefine $*$ and implement it as element-wise multiplication. This means that if I have written regular multiplication expressions consisting of at least one \texttt{FAD} variable, element-wise multiplication will be executed.
 
 \subsection{Optimizing \texttt{ForwardAutoDiff}}
-By looking closer at the implementation of the Jacobian in \texttt{FAD}, we can find that in some cases there are better approaches to storing the Jacobian that will gain computational efficiency. Before looking closer at the specific situations, I will explain how the sparse matrix type, \texttt{SparseMatrixCSC}, that \texttt{FAD} uses is built up and how it works. \texttt{SparseMatrixCSC} stands for \textit{Compressed Sparse Column Sparse Matrix Storage} which is a standard format for storing spare matrices \emph{\citep{doi:10.1137/1.9780898718003.ch3}}. According to the Julia documentation \emph{\citep{SparseMatrixCSC}} the SparseMatrixCSC struct is given as
+By looking closer at the implementation of the Jacobian in \texttt{FAD}, we can find that in some cases there are better approaches to storing the Jacobian that will gain computational efficiency. Before looking closer at the specific situations, I will explain how the sparse matrix type, \texttt{SparseMatrixCSC}, that \texttt{FAD} uses is built up and how it works. \texttt{SparseMatrixCSC} stands for \textit{Compressed Sparse Column Sparse Matrix Storage} which is a standard format for storing spare matrices \citep{doi:10.1137/1.9780898718003.ch3}. According to the Julia documentation, \emph{\citet{SparseMatrixCSC}}, the SparseMatrixCSC struct is given as
 \lstinputlisting{code/SparseMatrixCSCStruct.jl}
 It represents a matrix with three vectors and two integers. The integers represent the size of the matrix and the three vectors represent all non-zero elements in the matrix. To explain how the vectors work, consider the example of a matrix \textbf{A} with the corresponding \texttt{SparseMatrixCSC} struct variables:
 \begin{multicols}{2}
@@ -295,7 +295,7 @@ The second issue I want to discuss is vectorized and devectorized code. The diff
 \lstinputlisting{code/devectorizedExample.jl}
 In a blog post, former Julia developer John Myles White explains how Julia is faster at executing devectorized code compared to vectorized code \citep{Vectorization}. This is in sharp contrast to other high-level mathematical programming languages like MATLAB, in which conventional wisdom would tell you that you have to vectorize your code to get the best computational performance. When you vectorize, MATLAB uses optimized code in C to execute the calculations. If you devectorize your code by calling a for-loop, you potentially bring in a lot of extra overhead. Note that, as mentioned in \autoref{sec:numericalLang}, recent development of MATLAB's just-in-time (JIT) compiler has changed the landscape a bit, and devectorized code can sometimes be significantly faster than vectorized code, in particular if the latter has to allocate a lot of temporary memory. 
 
-In Julia, for-loops are generally close to matching C's speed. So you might say that \enquote{why not devectorize all the code?} And that could indeed be done, but here we have another example of the conflict between efficient and readable code. From the example with element-wise multiplication of the two vectors, the vectorized form is much more compact and readable, but according to White, the devectorized version is faster. To make a decision whether to implement vectorized or devectorized, we need to know more specifically what the differences are. White's blog post is from 2013, and since then, the vectorization in Julia has improved. Steven G. Johnson has written a newer blog post from 2017 \emph{\citep{MoreDotsJuliaBlog}}, in which he closer explains the reason why it is difficult to obtain the same speed for vectorized code as we have for devectorized code in a language like Julia. To explain this, consider two different vector functions $f$ and $g$ that we want to multiply element-wise
+In Julia, for-loops are generally close to matching C's speed. So you might say that \enquote{why not devectorize all the code?} And that could indeed be done, but here we have another example of the conflict between efficient and readable code. From the example with element-wise multiplication of the two vectors, the vectorized form is much more compact and readable, but according to White, the devectorized version is faster. To make a decision whether to implement vectorized or devectorized, we need to know more specifically what the differences are. White's blog post is from 2013, and since then, the vectorization in Julia has improved. Steven G. Johnson has written a newer blog post from 2017 \citep{MoreDotsJuliaBlog}, in which he closer explains the reason why it is difficult to obtain the same speed for vectorized code as we have for devectorized code in a language like Julia. To explain this, consider two different vector functions $f$ and $g$ that we want to multiply element-wise
 \begin{equation*}
     h(x,y) = f(x) \cdot g(y), \hspace{3em} f(x) = \exp(x), \hspace{3em} g(y) = \log(y).
 \end{equation*}
@@ -322,7 +322,7 @@ To separate the three methods, I have calculated $h(x,y)$ 1,000 times for random
          \hline
     \end{tabular}
 \end{table}
-The \texttt{devectorized} and the \texttt{dotsOutside} methods perform  identically, whereas \texttt{dotsInside} requires three times the number of allocations and memory and is also somewhat slower than the two other methods. This result confirms what Steven G. Johnson explains in \emph{\cite{MoreDotsJuliaBlog}}, where he says that the problem with vectorized operations is that they can generate new temporary arrays for each operation and that every operation is executed in a separate loop. This means that when Julia compiles the program and translates the vectorized code into devectorized code, it will compute the \texttt{dotsInside} method similar to the following code:
+The \texttt{devectorized} and the \texttt{dotsOutside} methods perform  identically, whereas \texttt{dotsInside} requires three times the number of allocations and memory and is also somewhat slower than the two other methods. This result confirms what Steven G. Johnson explains in \cite{MoreDotsJuliaBlog}, where he says that the problem with vectorized operations is that they can generate new temporary arrays for each operation and that every operation is executed in a separate loop. This means that when Julia compiles the program and translates the vectorized code into devectorized code, it will compute the \texttt{dotsInside} method similar to the following code:
 \lstinputlisting{code/vectorizedOperation.jl}
 The compiler does this because it does not understand that all the operations are element-wise. As a consequence, it has to allocate three new arrays compared to the single new array in the \texttt{devectorized} method. However, with the \texttt{dotsOutside} method, the compiler understands that all the operations in the expression are vectorized operations and we get what Johnson calls \textit{loop fusion}. This essentially means that Julia devectorize the \texttt{dotsOutside} method into the \texttt{devectorized} method, and since Julia does not call low-level code like C to perform its vectorized code, the performance of \texttt{devectorized} and \texttt{dotsOutside} will be similar. Another advantage of using the dot operator like in \texttt{dotsOutside} is that we do not have to define if a function is vectorized or not. In other words, $f$ and $g$ can be used as functions for vectors and scalars, we specify what type of use we want when we call the function. This leads to more readable code, as we do not have to check whether a function is written for vectorization or not.
 
