--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -1,12 +1,12 @@
 \chapter{Local Automatic Differentiation}
 \label{ch:LocalAD}
-This chapter will consider a different approach on how to use AD to solve PDEs. When solving PDEs using a finite volume method each cell will only depend on the neighboring cells. In the \texttt{FAD} and \texttt{CJAD} implementations, the dependencies are stored in the discrete gradient and divergence operators. The implementations calculate the residual function value and corresponding Jacobian for the whole grid simultaneously by having a vector to store the values and sparse matrices for the Jacobians. Hence, when the discrete gradient and divergence operators are used in the calculation of the residual function in \autoref{ch:FlowSolver}, the Jacobian are obtained with the structure seen in \autoref{fig:flowSolverJacobian}. Local AD is an alternative approach, that instead of calculating the residual function for all cells at once, using matrix and vector operations, it iterates through the grid and for each cell calculates the local residual. In the end it will perform exactly the same calculations as \texttt{FAD} and \texttt{CJAD}, but instead of having large vector and matrix calculations, we now have smaller calculations concerning only one cell, and its neighbors, at the time. This new approach is based on the same idea as how AD is implemented in OPM, which, as said in introduction, is written in C and C++. The AD tool in OPM scales better when the simulations become larger and is the reason why it is used when creating efficient industrial simulators. Hence, it is interesting to see if you can write similar type of code in Julia and obtain better computational efficiency than what is achieved in MATLAB with MRST, as well as the methods I have already implemented in Julia. If this is possible, Julia could be a language where both prototyping and industrial simulators can be implemented, making the development process much more efficient. 
+This chapter will consider a different approach on how to use AD to solve PDEs. When solving PDEs using a finite volume method each cell will only depend on the neighboring cells. In the \texttt{FAD} and \texttt{CJAD} implementations, the dependencies are stored in the discrete gradient- and divergence operator. The implementations calculate the residual function value and corresponding Jacobian for the whole grid simultaneously by having a vector to store the values and sparse matrices for the Jacobians. Hence, when the discrete gradient and divergence operators are used in the calculation of the residual function in \autoref{ch:FlowSolver}, the Jacobian are obtained with the structure seen in \autoref{fig:flowSolverJacobian}. Local AD is an alternative approach, where instead of calculating the residual function for all cells at once, using matrix and vector operations, it iterates through the grid and for each cell calculates the local residual. In the end it will perform exactly the same calculations as \texttt{FAD} and \texttt{CJAD}, but instead of having large vector and matrix calculations, we now have smaller calculations concerning only one cell and its neighbors at the time. This new approach is based on the same idea as how AD is implemented in OPM, which, as said in introduction, is written in C and C++. The AD tool in OPM scales better when the simulations become larger and is the reason why it is used when creating efficient industrial simulators. Hence, it is interesting to see if you can write similar type of code in Julia and obtain better computational efficiency than what is achieved in MATLAB with MRST, as well as the methods I have already implemented in Julia. If this is possible, Julia could be a language where both prototyping and industrial simulators can be implemented, making the development process much more efficient. 
 
 \section{Implementation}
 \label{sec:LADImplementation}
 To get a better understanding of how local AD works, it is best to look at how it is implemented\footnote{In the following I will explain a minor simplified implementation. This is to keep the focus on the essential parts of the implementation. The left out parts will be discussed in \autoref{sec:optimizingLocalAD}}. Like for \texttt{FAD} and \texttt{CJAD} I have implemented local AD using a struct called \texttt{LAD}:
 \lstinputlisting{code/LAD_structSimple.jl}
-Since we now only operate on one cell at the time, the implementation of local AD is simpler than for \texttt{FAD} and \texttt{CJAD}. The value of the AD-variable is now only a scalar and the Jacobian matrices are replaced by a vector of derivatives. These are the derivatives  with respect to the primary variables in the cell. For the single-phase flow solver in \autoref{ch:FlowSolver}, the derivatives vector will be of length one, as each cell only contain one primary variable (pressure). The implementation of \texttt{LAD} is, however, with \texttt{derivatives} as a vector. This is for the opportunity to implement more complex simulations like a two- or three-phase simulator, where each cell can contain multiple primary variables for the amount of water, oil and/or gas present in the cell (an example of a two-phase simulator can be seen in \autoref{sec:TwoPhaseSimulation}).
+Since we now only operate on one cell at the time, the implementation of local AD is simpler than for \texttt{FAD} and \texttt{CJAD}. The value of the AD-variable is now only a scalar and the Jacobian matrices are replaced by a vector of derivatives. These are the derivatives  with respect to the primary variables in the cell. For the single-phase flow solver in \autoref{ch:FlowSolver}, the \texttt{derivatives} vector will be of length one, as each cell only contain one primary variable (pressure). The implementation of \texttt{LAD} is, however, with \texttt{derivatives} as a vector. This is for the opportunity to implement more complex simulations like a two- or three-phase simulator, where each cell can contain multiple primary variables for the amount of water, oil and/or gas present in the cell (an example of a two-phase simulator can be seen in \autoref{sec:TwoPhaseSimulation}).
 
 To make sure that each primary variable is initialized correctly, initialization of \texttt{LAD} variables is done with the \texttt{createVariable} function. This function creates a \texttt{LAD} variable with a value and a given number of derivatives. The derivative with respect to itself is set to $1.0$, whereas the other derivatives are zero.
 \lstinputlisting{code/createVariable.jl}
@@ -14,7 +14,7 @@ The operators for the \texttt{LAD} struct are implemented similarly as explained
 
 \subsection{Flow Solver for Local AD}
 \label{sec:FlowSolverLADImplementation}
-Whereas the implementation of the local AD tool is easier than for \texttt{FAD} and \texttt{CJAD}, there is more work when calculating the residual functions. Since we no longer can use discrete gradient and divergence operators, but instead have to traverse through the grid cell by cell, we need a place to store the resulting residual values and the corresponding Jacobian. We also need a method to traverse through all the cells and calculate the contributions from each neighboring cell. To create the flow solver from \autoref{ch:FlowSolver}, I have chosen to store the calculated values of the residual functions in another struct called \texttt{FlowSystem}:
+Whereas the implementation of the local AD tool is easier than for \texttt{FAD} and \texttt{CJAD}, there is more work when calculating the residual functions. Since we no longer can use discrete gradient- and divergence operator, but instead have to traverse through the grid cell by cell, we need a place to store the resulting residual values and the corresponding Jacobian. We also need a method to traverse through all the cells and calculate the contributions from each neighboring cell. To create the flow solver from \autoref{ch:FlowSolver}, I have chosen to store the calculated values of the residual functions in another struct called \texttt{FlowSystem}:
 \lstinputlisting{code/FlowSystem.jl}
 This struct looks very similar to the other AD structs, except from \texttt{globalJac} being one single sparse matrix instead of a vector of sparse matrices. At this point you might not understand why it is quicker to calculate the residuals cell by cell compared to everything in one go. The key reason for this lies in the \texttt{FlowSystem} struct. Since we know that the structure of the global Jacobian will stay the same, we can reuse this sparse matrix structure throughout the whole simulation. Before the simulation begins, we use the grid variable \texttt{G}, which contains the information on which cells are neighbors, to build the correct structure of \texttt{globalJac} once and for all. When we later run the simulation, we only change the values inside of \texttt{globalJac}, but the structure stays the same. This reuse of \texttt{globalJac} will save a lot of memory allocations and hence consume less CPU time compared to \texttt{FAD} and \texttt{CJAD}, which both allocate new structs for each calculation. By creating a new constructor for \texttt{FlowSystem} that uses the grid variable \texttt{G}, the variables \texttt{eqVal} and \texttt{globalJac} will be allocated with the correct length and structure before the simulation begins. For the grid in \autoref{ch:FlowSolver}, we have 1,000 cells. This implies 1,000 different pressure values and in addition we have the bottom-hole pressure (\texttt{bhp}) and the total production (\texttt{qS}). Hence, \texttt{eqVal} will be a vector of length 1,002.
 
@@ -26,11 +26,11 @@ The input parameter \texttt{well} is a struct that contains all necessary inform
 \lstinputlisting{code/governingEquationsPresSolver.jl}
 In line number six, \texttt{fromCell} and \texttt{toCell} are equal, but do not reference the bottom-hole-pressure or total production. Here, the first term in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function called \texttt{timeDerivative()} that returns a \texttt{LAD} struct:
 \lstinputlisting{code/timeDerivative.jl}
-In \texttt{FAD} and \texttt{CJAD}, we made all the primary AD-variables before the simulation. We then used them as input parameters in the residual functions that returned new AD-variables which represented the values and Jacobians. With local AD, we create new primary AD-variables for the applicable cell inside the function we want to evaluate. For \texttt{timeDerivative()} we create a \texttt{LAD} primary variable that represents the pressure in the cell before we calculate the backward Euler term. When \texttt{timeDerivative()} has returned the new \texttt{LAD} variable, \texttt{assembleFlowSystem!()} adds the calculated value to the correct index in \texttt{eqVal} and the derivative value to the correct diagonal index in \texttt{globalJac}.
+In \texttt{FAD} and \texttt{CJAD}, we made all the primary AD-variables before the simulation. We then used them as input parameters in the residual function that returned a new AD-variable which represented the values and Jacobians. With local AD, we create new primary AD-variables for the applicable cell inside the function we want to evaluate. For \texttt{timeDerivative()} we create a \texttt{LAD} primary variable that represents the pressure in the cell before we calculate the backward Euler term. When \texttt{timeDerivative()} has returned the new \texttt{LAD} variable, \texttt{assembleFlowSystem!()} adds the calculated value to the correct index in \texttt{eqVal} and the derivative value to the correct diagonal index in \texttt{globalJac}.
 
-In line number ten, when \texttt{fromCell} and \texttt{toCell} are two neighboring cells, the divergence term in \texttt{presEq} is calculated. Like for \texttt{timeDerivative()}, we create the primary AD-variables inside the function, but since we calculate the flux from one cell to another, we have to be careful with which direction we calculate the flux and which cell we want the derivative with respect to. Since the varying variables are named \texttt{fromCell} and \texttt{toCell}, it is natural that the function \texttt{flux()}, seen below, calculates the flux from \texttt{fromCell} to \texttt{toCell}. 
+In line number ten, when \texttt{fromCell} and \texttt{toCell} are two neighboring cells, the divergence term in \texttt{presEq} is calculated. Like for \texttt{timeDerivative()}, we create the primary AD-variables inside the function, but since we calculate the flux from one cell to another, we have to be careful with which direction we calculate the flux and which cell we want the derivative with respect to. Since the varying variables are named \texttt{fromCell} and \texttt{toCell}, it is natural that the function \texttt{flux()}, calculates the flux from \texttt{fromCell} to \texttt{toCell}:
 \lstinputlisting{code/fluxFunctionLocalAD.jl}
-What needs to be chosen is which cell we want the derivative with respect to. The choice only affects which indices of the Jacobian the calculated derivatives should be added or subtracted to. In \texttt{flux()}, I have decided to calculate the derivative with respect to \texttt{fromCell}. The two first lines show the consequence of this, where \texttt{pFrom} is initialized with a derivative of $1$ and \texttt{pTo} as a constant. This choice leads to the following code for updating \texttt{FlowSystem} at line number ten in \texttt{assembleFlowSystem!()}:
+What needs to be chosen is which cell we want the derivative with respect to. The choice only affect which indices of the Jacobian the calculated derivatives should be added or subtracted to. In \texttt{flux()}, I have decided to calculate the derivative with respect to \texttt{fromCell}. The two first lines show the consequence of this, where \texttt{pFrom} is initialized with a derivative of $1$ and \texttt{pTo} as a constant. This choice leads to the following code for updating \texttt{FlowSystem} at line number ten in \texttt{assembleFlowSystem!()}:
 \lstinputlisting{code/fluxCodeLocalAD.jl}
 The value of \texttt{fluxLAD} is added to \texttt{eqVal} and the derivative of the flux with respect to \texttt{fromCell} is added to \texttt{globalJac}. In addition we know that the flux from \texttt{fromCell} to \texttt{toCell} is the same as from \texttt{toCell} to \texttt{fromCell}, but with negative sign. This means that the derivative of the flux from \texttt{toCell} with respect to \texttt{fromCell} needs to be subtracted with \texttt{fluxLad.derivatives}. For a facet between two neighbors, we will with \texttt{assembleFlowSystem!()} calculate the value of the flux through the facet twice, only with different signs. You might think that we could save time by subtracting \texttt{fs.eqVal[toCell]} with \texttt{fluxLAD.val}, but since we also will need the opposite derivatives of this particular flux, there will be small, or next to none, computational gain of exploiting this fact. In worst case it might actually become a slower implementation, as we would have had to keep track of which fluxes have been added to which cells. When the fluxes from all the neighbors have been added up for a cell, we have obtained the divergence in that cell. 
 
@@ -43,16 +43,16 @@ Now that the assemble of the governing equations are implemented, we need a main
 
 \section{Optimizing Local AD}
 \label{sec:optimizingLocalAD}
-As explained in the beginning of this chapter, the main idea behind local AD is to reuse the Jacobian to save memory usage and extra memory allocations. The implementation given in \autoref{sec:LADImplementation} has nevertheless left out some small, but key parts of the implementation that will massively decrease the memory and CPU usage. This is purely implementation specific differences that have been left out to make the introduction to local AD more clear. It will not change the theory behind using local AD to solve PDE's.
+As explained in the beginning of this chapter, the main idea behind local AD is to reuse the Jacobian to save memory usage and extra memory allocations. The implementation given in \autoref{sec:LADImplementation} has nevertheless left out some small, but key parts of the implementation that will massively decrease the memory and CPU usage. This is purely implementation specific differences that have been left out to make the introduction to local AD more clear. It will not change the theory behind using local AD to solve PDEs.
 
 \subsection{Dynamic VS Static Arrays}
 The difference between a dynamic array and a static array is that a dynamic array can be extended or shortened as much as you like while a static array has a fixed length. Using a static array will give computational gain concerning speed and memory allocations compared to a dynamic array. This is because the compiler knows that a static array has the given fixed length forever and hence it can allocate the exact memory needed in advance and optimize the machine code accordingly. With a dynamic array, the compiler does not know if the array will grow larger, or become smaller, and it is much harder to optimize the machine code. 
 
 Julia has a package called \emph{\cite{StaticArrays}} that provides static arrays with the same abilities as the built-in arrays, but without the possibility for changing the size of the array. The package provides two types of vectors, \texttt{SVector} and \texttt{MVector}(for two-dimensional arrays it has the corresponding \texttt{SMatrix} and \texttt{MMatrix}). Both are static vectors, but \texttt{MVector} is mutable, meaning the values inside the vector can be changed, whereas the values inside an \texttt{SVector} are final once the vector is defined. This makes \texttt{SVector} ideal for \texttt{LAD.derivatives}, since when we perform operations on \texttt{LAD} variables, new \texttt{LAD} variables are returned.\footnote{For a multiphase simulation, a possible implementation can be each element in the global Jacobian being an \texttt{n}$\times$\texttt{n} matrix, where \texttt{n} is the number of primary variables in each cell. For this particular case, an \texttt{MMatrix} is optimal to use as we know the size of the matrices, but we want to change the values inside the matrix.} 
 
-When the implementation is changed to use static vectors, it needs to know how long these vectors are. When building a simulator, it is not a problem to say in advance how many derivatives we need, and once the compiler knows this before compilation, it can optimize the machine code. OPM solves this by creating a template class containing the length of the gradient vector \emph{\citep{lauser2018local}}. This ensures that the compiler always knows that for this simulator, the static vector will always have the given fixed length. This is important because we do not want to create \texttt{LAD} structs with different lengths for \texttt{LAD.derivatives}. In addition, if we define this clearly, the compiler knows exactly how much memory is needed when we allocate a new \texttt{LAD} variable. By giving the compiler this information before compilation, we help it to optimize the machine code. This will also make the implementation of the operators of \texttt{LAD} easier, as we know for certain that all \texttt{LAD} variables will have \texttt{derivatives} vectors with the same length. The best implementation I have found for this in Julia is to declare a global constant variable in the local AD module such that the new implementation of \texttt{LAD} becomes:
+When the implementation is changed to use static vectors, it needs to know how long these vectors are. When building a simulator, it is not a problem to say in advance how many derivatives we need, and once the compiler knows this before compilation, it can optimize the machine code. OPM solves this by creating a template class containing the length of the gradient vector \citep{lauser2018local}. This ensures that the compiler always knows that for this simulator, the static vector will always have the given fixed length. This is important because we do not want to create \texttt{LAD} structs with different lengths for \texttt{LAD.derivatives}. In addition, if we define this clearly, the compiler knows exactly how much memory is needed when we allocate a new \texttt{LAD} variable. By giving the compiler this information before compilation, we help it optimizing the machine code. This will also make the implementation of the operators to \texttt{LAD} easier, as we know for certain that all \texttt{LAD} variables will have \texttt{derivatives} vectors with the same length. The best implementation I have found for this in Julia is to declare a global constant variable in the local AD module such that the new implementation of \texttt{LAD} becomes:
 \lstinputlisting{code/LAD_struct.jl}
-The disadvantage with this implementation is that the Local AD module needs to be modified to work for simulations with more primary variables for each cell. Since the implementations of the operators are unchanged, this modifications will only consist of changing the value of \texttt{NUM\_DERIV}. However, it would be better if Julia had the opportunity to pass in an argument into the \texttt{LAD} module. In this way the module could be compiled with any given value for \texttt{NUM\_DERIV}. As it is now, it is not possible to have one single \texttt{LAD} module and two different simulators with different number of primary variables, at the same time, in the same directory. A workaround could be to have multiple \texttt{LAD} modules with the only difference being the value of \texttt{NUM\_DERIV}. This would be a fully functional workaround, but not a very elegant one.
+The disadvantage with this implementation is that the Local AD module needs to be modified to work for simulations with more primary variables for each cell. Since the implementations of the operators are unchanged, this modifications will only consist of changing the value of \texttt{NUM\_DERIV}. However, it would be better if Julia had the opportunity to pass in an argument into the \texttt{LAD} module. In this way the module could be compiled with any given value for \texttt{NUM\_DERIV}. As it is now, it is not possible to have one single \texttt{LAD} module and two different simulators with different number of primary variables, at the same time in the same directory. A workaround could be to have multiple \texttt{LAD} modules with the only difference being the value of \texttt{NUM\_DERIV}. This would be a fully functional workaround, but not a very elegant one.
 
 \section{Flow Solver Results for Local AD}
 \label{sec:flowSolverWithLAD}
@@ -74,12 +74,12 @@ As explained in \autoref{sec:profiling}, profiling is an efficient way of findin
     \end{subfigure}
     \caption{The figures shows screenshots of the profile result from \texttt{flux()} in the flow solver simulation from \autoref{ch:FlowSolver}. The blocks marked with squares are time spent in \texttt{createVariable()} and the blocks with bright diagonal lines are calculations in \texttt{flux()}. \autoref{fig:profileSlowCreateVar} uses a slow version of \texttt{createVariable()} while \autoref{fig:profileFastCreateVar} uses a faster version.}
 \end{figure}
-It is surprising that creating a \texttt{LAD} struct should take more time than the actual AD calculations. This indicates that the \texttt{createVariable()} function is poorly implemented. If we look closer at the implementation, we see that we only want to create a static \texttt{Svector}, but we start by creating a dynamic vector of zeros, and then we modify the vector by changing one of the values to one. Finally, we convert the dynamic vector into a static \texttt{SVector} in the last line. The new implementation seen below is a Julia specific implementation, where the \texttt{SVector} is created immediately with correct values and without any use of dynamic vectors.
+It is surprising that creating a \texttt{LAD} struct should take more time than the actual AD calculations. This indicates that the \texttt{createVariable()} function is poorly implemented. If we look closer at the implementation, we see that we only want to create a static \texttt{Svector}, but we start by creating a dynamic vector of zeros, and then we modify the vector by changing one of the values to one. Finally, we convert the dynamic vector into a static \texttt{SVector} in the last line. The new implementation seen below is a Julia specific implementation, where the \texttt{SVector} is created immediately with correct values and without any use of dynamic vectors:
 \lstinputlisting{code/createVariableFast.jl}
 The new profiling result with the updated \texttt{createVariable()} can be seen in \autoref{fig:profileFastCreateVar}. The time spent in \texttt{createVariable()} is almost eliminated and we can see that approximately all the time spent in \texttt{flux} is used for AD calculations. This is what is expected as initialization should be far less time consuming than AD calculations. 
 
-As discussed in \autoref{ch:FlowSolver}, by only looking at the assemble of the residual functions, and not the full simulation, we eliminate the linear solver from the benchmark, and we get a better understanding of how efficient the AD tools are. \autoref{tab:FlowSolverAssemblyTestWithLAD} is the same table as \autoref{tab:FlowSolverAssemblyTest}, assembling the residual functions 100 times, but with the measured time for Local AD added to the end of the table.
-\begin{table}[b]
+As discussed in \autoref{ch:FlowSolver}, by only looking at the assemble of the residual functions, and not the full simulation, we eliminate the linear solver from the benchmark, and we get a better understanding of how efficient the AD tools are. \autoref{tab:FlowSolverAssemblyTestWithLAD} is the same table as \autoref{tab:FlowSolverAssemblyTest}, assembling the residual functions 100 times, but with the measured time for Local AD added to the end of the table. The table shows that the local AD approach is at least six times faster than the other tested implementations, which is a significant improvement. This gives us an indication that Julia can be a language where we can quickly create new simulators using the high-level and user-friendly \texttt{CJAD} or a similar AD tool, and in the same language create more efficient simulators using a method like local AD. However, to confirm this we need to benchmark the performance for a larger problem than a single-phase pressure solver. In \autoref{sec:TwoPhaseSimulation}, I will test how local AD performs in Julia solving a two-phase problem with a more realistic grid structure. This will give a better indication on how well Julia is suited for creating high performance simulators.
+\begin{table}[htb]
     \centering
     \caption{Table with speed tests of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
     \label{tab:FlowSolverAssemblyTestWithLAD}
@@ -92,11 +92,10 @@ As discussed in \autoref{ch:FlowSolver}, by only looking at the assemble of the 
          $30\times30\times30$ & 44.2s& 17.2s& 16.5s & 2.2s \\ \hline
     \end{tabular}
 \end{table}
-The table shows that the local AD approach is at least six times faster than the other tested implementations, which is a significant improvement. This gives us an indication that Julia can be a language where we can quickly create new simulators using the high-level and user-friendly \texttt{CJAD} or a similar AD tool, and in the same language create more efficient simulators using a method like local AD. To confirm this, however, we need to benchmark the performance for a larger problem than a single-phase pressure solver. In \autoref{sec:TwoPhaseSimulation}, I will test how local AD performs in Julia solving a two-phase problem with a more realistic grid structure. This will give a better indication on how well Julia is suited for creating high performance simulators.
 
 \section{Two-Phase Incompressible Flow}
 \label{sec:TwoPhaseSimulation}
-Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform when simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
+Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery, or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform when simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project (SPE10) \citep{SPE10}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
 
 The SPE10 (Model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1,122,000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13,200 cells. The SPE10 grid differs from the grid in \autoref{ch:FlowSolver} in that the permeability and porosity varies throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around wells P3 and P4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the injected water will primarily flow to the left.
 \begin{figure}[H]
@@ -118,7 +117,7 @@ The governing equations for a two-phase flow are similar to the ones expressed i
     \textbf{v} = - \frac{K}{\mu}\nabla p.
     \label{eq:DarcyNoGravity}
 \end{equation*}
-However, now we need to separate between the flow of water, flow of oil and their overall flow. Before injection of water, each cell is only filled with oil. This implies that the amount of oil in a cell equals the pore volume in that cell. Since our grid only contain one layer, we can find the pore volume by simply multiplying the total volume of the cell with the porosity, a number between zero and one. The volumetric fractions of water and oil, called the saturation, are defined similarly as the porosity as pointwise quantities, subject to the condition
+However, now we need to separate between the flow of water, flow of oil and their overall flow. Before injection of water, each cell is only filled with oil. This implies that the amount of oil in a cell equals the pore volume in that cell. Since our grid only contain one layer, we can find the pore volume by simply multiplying the total volume of the cell with the porosity, a number between zero and one. The volumetric fractions of water and oil, called the saturation, are defined similarly as the porosity with pointwise quantities, subject to the condition
 \begin{equation*}
 \sum_\alpha S_\alpha = 1,
 \end{equation*}
@@ -170,9 +169,9 @@ where $f_w$ is called the fractional water flow. Inserting the expression for wa
 Even though we now have separated the governing equations into a pressure equation and a transport equation, they are still coupled. \myeqref{eq:pressureEq} is depending on the water saturation in the total mobility $\lambda$ and \myeqref{eq:transportEq} is depending on the pressure in Darcy's law for the flux, \textbf{v}. However, this coupling is weaker than in \myeqref{eq:continuityEqsMultiPhaseIncomp}, and this weaker coupling opens up the opportunity to use an operator splitting method. This consist of first solving the pressure equation, holding the saturation constant. Then, when we have found the correct pressure, we hold the pressure and the total flux constant for a (short) time step and solve the transport equation. Since the total flux is held constant as well when solving the transport equation, the total flux calculated in the pressure equation can be used to solve the transport equation. This is why we wanted to find an expression for the water flux, given by the total flux. When the water saturation is updated, we continue with the next time step by solving the pressure equation for constant saturation, and so on.
 
 \subsection{Implementation of a Two-Phase Solver}
-In the implementation of the two-phase simulator for the SPE10 grid, a lot will be very similar as for the previous single-phase implementation from \autoref{sec:FlowSolverLADImplementation}. The \texttt{FlowSystem} struct is replaced with a \texttt{TwoPhaseSystem} struct that hold the residuals and Jacobians for both equations. In addition to this, for implementation convenience purposes, it also holds the current pressure and water saturation.
+In the implementation of the two-phase simulator for the SPE10 grid, a lot will be very similar as for the previous single-phase implementation from \autoref{sec:FlowSolverLADImplementation}. The \texttt{FlowSystem} struct is replaced with a \texttt{TwoPhaseSystem} struct that hold the residuals and Jacobians for both equations. In addition to this, for implementation convenience purposes, it also holds the current pressure and water saturation:
 \lstinputlisting{code/TwoPhasSystem.jl}
-Naturally, instead of having a single function to assemble equations, the simulator now has two. These are called \texttt{assemblePressureEquations!()} and \texttt{assembleTransportEquations!()}, and are implemented with the same structure as \texttt{assembleFlowSystem!()}, only that the equations calculated are different. The main loop that controls the simulation is also extended. As explained above, the pressure equation and the transport equation are solved interchangeably and the implementation of this can be seen below.
+Naturally, instead of having a single function to assemble the equations, the simulator now has two. These are implemented with the same structure as \texttt{assembleFlowSystem!()} and are called \texttt{assemblePressureEquations!()} and \texttt{assembleTransportEquations!()}. The only difference from \texttt{assembleFlowSystem!()} is that the equations calculated are different. The main loop that controls the simulation is also extended. As explained above, the pressure equation and the transport equation are solved interchangeably and the implementation of this can be seen below:
 \lstinputlisting{code/TwoPhaseSimulator.jl}
 
 \subsection{Two-Phase Solver Results}
@@ -185,7 +184,7 @@ Even though we are most interested to see how the AD tools perform, we also have
 \end{figure}
 
 To benchmark the AD performance in the two-phase simulation, the AD calculations are separated from the linear solver, similar to the previous tests. The simulation in \autoref{fig:waterSatResultsSPE10} used approximately 150 time steps, and for each time step, the Newton--Raphson method used two iterations to solve the pressure equations and approximately six iterations to solve the transport equations. The benchmark is essentially the same simulation, but without the linear solver and the update of the pressure and water saturation. This will give us a good estimation on how much time the simulator spend on AD during the simulation. As mentioned in \autoref{sec:FlowSolverResults}, since the benchmark does not update the pressure and water saturation, we need to double check that the compiler does not understand that it can skip iterations, since it calculates the same thing over and over again. It was not the case in \autoref{sec:FlowSolverResults}, and it is not the case here. The benchmark is performed for the local AD-, \texttt{CJAD}- and \texttt{MRST} method. The results of the benchmark can be seen in \autoref{tab:TwoPhaseBenchmark}. The table shows that \texttt{CJAD} and \texttt{MRST} perform similar, with approximately 30 seconds in total. The local AD outperforms both of the two other methods, and for this specific test, it is approximately five times as fast.
-\begin{table}[htb]
+\begin{table}[b]
     \centering
     \caption{Table with speed tests of different AD methods assembling the two-phase incompressible flow residual     equations. The number of equations assembled corresponds to what was performed in the simulation for \autoref{fig:waterSatResultsSPE10}.}
     \label{tab:TwoPhaseBenchmark}
