--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -214,7 +214,7 @@ eprint = {
   author = {Steven G. Johnson},
   url = {https://julialang.org/blog/2017/01/moredots},
   urldate = {2019-03-13},
-  year = {2017.01.21},
+  year = {2017},
   note = {Accessed 13.03.2019}
 }
 
@@ -331,4 +331,11 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9780898718003.ch3}
     urldate = {2019-05-29},
     year = {n.d.},
     note = {Accessed 29.05.2019}
+}
+@misc{Bitbucket,
+    key = {Bitbucket repository},
+    url = {https://bitbucket.org/sgrostad/sindre-msc-thesis.jl/src/master/},
+    urldate = {2019-06-05},
+    year = {n.d.},
+    note = {Accessed 05.06.2019}
 }
