--- a/frontmatter/abstract_norwegian.tex
+++ b/frontmatter/abstract_norwegian.tex
@@ -3,6 +3,6 @@ Denne masteroppgaven gir en introduksjon til automatisk derivasjon (AD) og hvord
 
 Tre forskjellige AD-biblioteker har blitt implementert i Julia og sammenlignet med implementasjoner fra \enquote{the MATLAB Reservoir Simulation Toolbox} (MRST) \emph{\citep{mrstHomepage}}, laget av \enquote{the Computational Geosciences group} ved institutt for matematikk og kybernetikk ved SINTEF Digital. MRST er et bibliotek som er designet for å raskt kunne lage nye prototyper av oljeutvinningssimulatorer med høynivå- og brukervennlige AD verktøy. De to første implementasjonene i Julia, \texttt{ForwardAutoDiff} (\texttt{FAD}) og \texttt{CustomJacobianAutoDiff} (\texttt{CJAD}), er inspirert av AD-verktøyene i MRST. Den tredje implementasjonen, lokal AD, er inspirert av implementasjonen av AD i \enquote{Open Porous Media (OPM) Flow simulator} \emph{\citep{opm}}. OPM er et biblitek, utviklet av den samme gruppen hos SINTEF, for å lage effektive industrielle simulatorer i C og C++.
 
-For å sammenligne AD metodene har det blitt utviklet to simuleringer. Den første implementasjonen var en en-fase trykkløser, som simulerer trykkfallet i et reservoar når man utvinner olje. \texttt{FAD} var den tregeste AD-metoden, omtrent dobbelt så treg som både \texttt{CJAD} og implementasjonen i MRST. Mens \texttt{CJAD} og MRST hadde lignende ytelse, var derimot metoden for lokal AD ca. seks ganger raskere enn disse to. Den andre simuleringen var en to-fase metningsløser, som simulerer hvordan vann strømmer inn i oljefeltet når det injiseres inn i midten av reservoaret. Lignende den første simuleringen hadde \texttt{CJAD} og MRST lik ytelse, mens metoden som brukte lokal AD var omtrent fem ganger raskere.
+For å sammenligne AD metodene har det blitt utviklet to simuleringer. Den første implementasjonen var en en-fase trykkløser, som simulerer trykkfallet i et reservoar når man utvinner olje. \texttt{FAD} var den tregeste AD-metoden, omtrent dobbelt så treg som både \texttt{CJAD} og implementasjonen i MRST. Mens \texttt{CJAD} og MRST hadde lignende ytelse, var derimot metoden for lokal AD ca. seks ganger raskere enn disse to. Den andre simuleringen var en to-fase metning- og trykkløser, som simulerer hvordan vann strømmer inn i oljefeltet når det injiseres inn i midten av reservoaret. Lignende den første simuleringen hadde \texttt{CJAD} og MRST lik ytelse, mens metoden som brukte lokal AD var omtrent fem ganger raskere.
 
 Sammenligningstestene viser lovende resultater som tyder på at Julia kan være et språk som gjør det mulig å lage både prototyper av simulatorer, ved hjelp av et brukervennlig AD-verktøy som \texttt{CJAD}, samt å skape høyytelses industrielle simulatorer, ved hjelp av et AD-verktøy som lokal AD.
